# amxx-offset-generator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
scripts/: .gitignore  create_amxx_files.py
src/OffsetExporter.Dwarf/: CMakeLists.txt  DwarfAttributes.h  DwarfCommon.h  DwarfTraverse.h  main.cpp  pch.h
src/OffsetExporter.Pdb/: CMakeLists.txt  MemoryMappedFile.cpp  MemoryMappedFile.h  TypeTable.cpp  TypeTable.h  main.cpp  pch.h
test-data/: class-list.txt  json-format.json  special-types.md
vcpkg-ports/raw-pdb/: add-cmake-install.patch  portfile.cmake  vcpkg.json
